# AI-Investment-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  MakeFile  Makefile  README.md  agents.py  config.yml  langgraph.json  main.py  multi_agent_workflow.ipynb  pyproject.toml  requirements.txt
.github/workflows/: main.yml  python-ci.yml
agent_tools/: financial_analyst_tools.py
mcp_servers/: company_researcher_server.py  financial_analyst_server.py  portfolio_manager_server.py
notebooks/: multi_agent_workflow.ipynb  tools_portfolio_manager.ipynb
notebooks/agent_tools/: company_research_tools.py  portfolio_manager_tools.py
src/: __init__.py  agents.py  config.py  main.py  model_factory.py
src/agent_tools/: __init__.py  company_research_tools.py  financial_analyst_tools.py  portfolio_manager_tools.py
studio/: .env.example  agents.py  langgraph.json  requirements.txt  tools.py  workflow.py
tests/: conftest.py  test_agents.py  test_company_research_tools.py  test_data.py  test_financial_analyst_tools.py  test_portfolio_manager_tools.py
