[project]
name = "ai-investment-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "uv==0.7.6",
    "langchain==0.3.25",
    "langgraph-supervisor==0.0.16",
    "langchain-openai==0.3.13",
    "langgraph==0.3.30",
    "langsmith==0.3.42",
    "langchain-community==0.3.21",
    "langchain-tests==0.3.19",
    "agentevals==0.0.8",
    "langchain-nvidia-ai-endpoints==0.3.10",
    "langchain-mcp-adapters==0.1.0",
    "langgraph-cli[inmem]==0.2.10",
    "openai==1.74.0",
    "python-dotenv==1.1.0",
    "alpaca-trade-api==3.2.0",
    "edgartools==3.14.6",
    "yfinance==0.2.55",
    "tavily-python==0.7.2",
    "typing-extensions",
    "pylint==3.3.7",
    "black==25.1.0",
    "pytest==8.0.0",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "langmem>=0.0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
